# python-ci-demo

./: .gitignore  LICENSE  pyproject.toml
.github/workflows/: ci.yml
tests/: test_calculator.py
